Finalize collation of Ziyang

--- a/collated/main/A0148037E.md
+++ b/collated/main/A0148037E.md
@@ -9,7 +9,7 @@ public enum TaskCategory {
     UPCOMING;
 }
 ```
-###### /java/seedu/geekeep/commons/events/model/SwitchTaskCategoryEvent.java
+###### \java\seedu\geekeep\commons\events\model\SwitchTaskCategoryEvent.java
 ``` java
 package seedu.geekeep.commons.events.model;
 
@@ -30,7 +30,7 @@ public class SwitchTaskCategoryEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/geekeep/commons/events/ui/TaskPanelSelectionChangedEvent.java
+###### \java\seedu\geekeep\commons\events\ui\TaskPanelSelectionChangedEvent.java
 ``` java
 package seedu.geekeep.commons.events.ui;
 
@@ -59,7 +59,7 @@ public class TaskPanelSelectionChangedEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/geekeep/logic/commands/FindCommand.java
+###### \java\seedu\geekeep\logic\commands\FindCommand.java
 ``` java
 package seedu.geekeep.logic.commands;
 
@@ -163,12 +163,12 @@ public class FindCommand extends Command {
     }
 }
 ```
-###### /java/seedu/geekeep/logic/parser/CliSyntax.java
+###### \java\seedu\geekeep\logic\parser\CliSyntax.java
 ``` java
     public static final Prefix PREFIX_BEFORE_DATETIME = new Prefix("b/");
     public static final Prefix PREFIX_AFTER_DATETIME = new Prefix("a/");
 ```
-###### /java/seedu/geekeep/logic/parser/FindCommandParser.java
+###### \java\seedu\geekeep\logic\parser\FindCommandParser.java
 ``` java
 package seedu.geekeep.logic.parser;
 
@@ -228,7 +228,7 @@ public class FindCommandParser {
 
 }
 ```
-###### /java/seedu/geekeep/logic/parser/ListCommandParser.java
+###### \java\seedu\geekeep\logic\parser\ListCommandParser.java
 ``` java
 package seedu.geekeep.logic.parser;
 
@@ -246,7 +246,7 @@ public class ListCommandParser {
     }
 }
 ```
-###### /java/seedu/geekeep/model/ModelManager.java
+###### \java\seedu\geekeep\model\ModelManager.java
 ``` java
     @Override
     /**
@@ -276,7 +276,7 @@ public class ListCommandParser {
     }
 
 ```
-###### /java/seedu/geekeep/model/ModelManager.java
+###### \java\seedu\geekeep\model\ModelManager.java
 ``` java
     private class TitleQualifier implements Qualifier {
         private Set<String> titleKeyWords;
@@ -350,20 +350,20 @@ public class ListCommandParser {
         }
     }
 ```
-###### /java/seedu/geekeep/model/tag/UniqueTagList.java
+###### \java\seedu\geekeep\model\tag\UniqueTagList.java
 ``` java
     public boolean isEmpty() {
         return internalList.isEmpty();
     }
 ```
-###### /java/seedu/geekeep/model/task/DateTime.java
+###### \java\seedu\geekeep\model\task\DateTime.java
 ``` java
     //with the constraint of DD-MM-YY, the max date time should be 2099-12-31 2359
     //and the min date time should be 2000-01-01 0000;
     public static final String MAX_TIME = "31-12-99 2359";
     public static final String MIN_TIME = "01-01-00 0000";
 ```
-###### /java/seedu/geekeep/model/task/DateTime.java
+###### \java\seedu\geekeep\model\task\DateTime.java
 ``` java
     /**
      * Returns the min date time GeeKeep currently supports
@@ -393,18 +393,18 @@ public class ListCommandParser {
         return maxDateTime;
     }
 ```
-###### /java/seedu/geekeep/model/task/DateTime.java
+###### \java\seedu\geekeep\model\task\DateTime.java
 ``` java
     public int compare(DateTime otherTime) {
         return dateTime.compareTo(otherTime.dateTime);
     }
 
 ```
-###### /java/seedu/geekeep/model/task/ReadOnlyTask.java
+###### \java\seedu\geekeep\model\task\ReadOnlyTask.java
 ``` java
     public int getPriority();
 ```
-###### /java/seedu/geekeep/model/task/ReadOnlyTask.java
+###### \java\seedu\geekeep\model\task\ReadOnlyTask.java
 ``` java
     /**
      * Get the task's DateTime that is used to compare date time.
@@ -444,7 +444,7 @@ public class ListCommandParser {
     public int compareTitle(ReadOnlyTask otherTask);
 
 ```
-###### /java/seedu/geekeep/model/task/Task.java
+###### \java\seedu\geekeep\model\task\Task.java
 ``` java
     @Override
     /**
@@ -463,12 +463,43 @@ public class ListCommandParser {
     }
 
 ```
-###### /java/seedu/geekeep/ui/MainWindow.java
+###### \java\seedu\geekeep\ui\CommandBox.java
+``` java
+    /**
+     * Sets the command box style to indicate a failed command.
+     */
+    private void setStyleToIndicateCommandFailure() {
+        ObservableList<String> styleClass = commandTextField.getStyleClass();
+        if (!styleClass.contains(ERROR_STYLE_CLASS)) {
+            commandTextField.getStyleClass().add(ERROR_STYLE_CLASS);
+        }
+    }
+```
+###### \java\seedu\geekeep\ui\DeadlineListPanel.java
+``` java
+package seedu.geekeep.ui;
+
+import javafx.collections.ObservableList;
+import javafx.scene.layout.AnchorPane;
+import seedu.geekeep.commons.core.LogsCenter;
+import seedu.geekeep.model.task.ReadOnlyTask;
+
+public class DeadlineListPanel extends TaskListPanel {
+    private static final String DEADLINE_FXML = "DeadlineListPanel.fxml";
+
+    public DeadlineListPanel(AnchorPane taskListPlaceholder, ObservableList<ReadOnlyTask> filteredList) {
+        super(DEADLINE_FXML, taskListPlaceholder, filteredList);
+        this.type = "deadline";
+        this.logger = LogsCenter.getLogger(DeadlineListPanel.class);
+    }
+}
+```
+###### \java\seedu\geekeep\ui\MainWindow.java
 ``` java
     // Independent Ui parts residing in this Ui container
-    private TaskListPanel floatingTaskListPanel;
-    private TaskListPanel eventListPanel;
-    private TaskListPanel deadlineListPanel;
+    private FloatingTaskListPanel floatingTaskListPanel;
+    private EventListPanel eventListPanel;
+    private DeadlineListPanel deadlineListPanel;
     private Config config;
 
     @FXML
@@ -487,17 +518,17 @@ public class ListCommandParser {
     private AnchorPane deadlineListPanelPlaceholder;
 
 ```
-###### /java/seedu/geekeep/ui/MainWindow.java
+###### \java\seedu\geekeep\ui\MainWindow.java
 ``` java
     void fillInnerParts() {
-        eventListPanel = new TaskListPanel("event",
-                getEventListPlaceholder(), logic.getFilteredEventList());
+        eventListPanel = new EventListPanel(getEventListPlaceholder(),
+                logic.getFilteredEventList());
 
-        floatingTaskListPanel = new TaskListPanel("floatingTask",
-                getFloatingTaskListPlaceholder(), logic.getFilteredFloatingTaskList());
+        floatingTaskListPanel = new FloatingTaskListPanel(getFloatingTaskListPlaceholder(),
+                logic.getFilteredFloatingTaskList());
 
-        deadlineListPanel = new TaskListPanel("deadline",
-                getDeadlineListPlaceholder(), logic.getFilteredDeadlineList());
+        deadlineListPanel = new DeadlineListPanel(getDeadlineListPlaceholder(),
+                logic.getFilteredDeadlineList());
 
         new ResultDisplay(getResultDisplayPlaceholder());
 
@@ -531,40 +562,7 @@ public class ListCommandParser {
     }
 
 ```
-###### /java/seedu/geekeep/ui/TaskCard.java
-``` java
-package seedu.geekeep.ui;
-
-import com.jfoenix.controls.JFXCheckBox;
-
-import javafx.fxml.FXML;
-import javafx.scene.control.Label;
-import javafx.scene.layout.FlowPane;
-import javafx.scene.layout.HBox;
-import javafx.scene.layout.Region;
-import seedu.geekeep.model.task.ReadOnlyTask;
-
-public class TaskCard extends UiPart<Region> {
-
-    private static final String FXML = "TaskListCard.fxml";
-
-    @FXML
-    private HBox cardPane;
-    @FXML
-    private Label title;
-    @FXML
-    private JFXCheckBox done;
-    @FXML
-    private Label id;
-    @FXML
-    private Label date;
-    @FXML
-    private Label descriptionOfTask;
-    @FXML
-    private FlowPane tags;
-
-```
-###### /java/seedu/geekeep/ui/TaskListPanel.java
+###### \java\seedu\geekeep\ui\TaskListPanel.java
 ``` java
 package seedu.geekeep.ui;
 
@@ -580,7 +578,6 @@ import javafx.scene.control.SplitPane;
 import javafx.scene.control.TabPane;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.Region;
-import seedu.geekeep.commons.core.LogsCenter;
 import seedu.geekeep.commons.core.TaskCategory;
 import seedu.geekeep.commons.events.ui.TaskPanelSelectionChangedEvent;
 import seedu.geekeep.commons.util.FxViewUtil;
@@ -590,12 +587,17 @@ import seedu.geekeep.model.task.ReadOnlyTask;
  * Panel containing the list of tasks.
  */
 public class TaskListPanel extends UiPart<Region> {
-    private final Logger logger = LogsCenter.getLogger(TaskListPanel.class);
-    private static final String EVENT_FXML = "EventListPanel.fxml";
-    private static final String FLOATING_TASK_FXML = "FloatingTaskListPanel.fxml";
-    private static final String DEADLINE_FXML = "DeadlineListPanel.fxml";
+    //private final Logger logger = LogsCenter.getLogger(TaskListPanel.class);
+
+    //Corresponding tab indices in the TabPane for different tabs.
+    private static final int ALL_TAB = 0;
+    private static final int UPCOMING_TAB = 1;
+    private static final int FINISHED_TAB = 2;
+
     private ListView<ReadOnlyTask> currentListView;
-    private String type;
+
+    protected String type;
+    protected Logger logger = null;
 
     @FXML
     private TabPane tabPanePlaceHolder;
@@ -609,27 +611,15 @@ public class TaskListPanel extends UiPart<Region> {
     @FXML
     private ListView<ReadOnlyTask> finishedListView;
 
-    public TaskListPanel(String type, AnchorPane taskListPlaceholder,
+    public TaskListPanel(String fxml, AnchorPane taskListPlaceholder,
             ObservableList<ReadOnlyTask> filteredList) {
-        super(getFxmlFromType(type));
-        this.type = type;
+        super(fxml);
         currentListView = allListView;
         setConnections(filteredList, allListView);
         setConnections(filteredList, finishedListView);
         setConnections(filteredList, upcomingListView);
         addToPlaceholder(taskListPlaceholder);
-        selectTab(0);
-    }
-
-    private static String getFxmlFromType(String type) {
-        if ("deadline".equals(type)) {
-            return DEADLINE_FXML;
-        } else if ("floatingTask".equals(type)) {
-            return FLOATING_TASK_FXML;
-        } else {
-            assert "event".equals(type);
-            return EVENT_FXML;
-        }
+        selectTab(ALL_TAB);
     }
 
     private void setConnections(ObservableList<ReadOnlyTask> taskList,
@@ -662,17 +652,24 @@ public class TaskListPanel extends UiPart<Region> {
         });
     }
 
+    public void clearSelection() {
+        currentListView.getSelectionModel().clearSelection();
+    }
 
     public void switchListView(TaskCategory category) {
         switch (category) {
-        case UNDONE:
-            selectTab(1);
+        case ALL:
+            selectTab(ALL_TAB);
+            currentListView = allListView;
             break;
-        case DONE:
-            selectTab(2);
+        case FINISHED:
+            selectTab(FINISHED_TAB);
+            currentListView = finishedListView;
             break;
         default:
-            selectTab(0);
+            assert category == TaskCategory.UPCOMING;
+            selectTab(UPCOMING_TAB);
+            currentListView = upcomingListView;
             break;
         }
         logger.info("Switched to " + category + " in " + type);
@@ -710,7 +707,7 @@ public class TaskListPanel extends UiPart<Region> {
 
 }
 ```
-###### /java/seedu/geekeep/ui/UiManager.java
+###### \java\seedu\geekeep\ui\UiManager.java
 ``` java
     @Subscribe
     private void handleSwitchTaskCategoryEvent(SwitchTaskCategoryEvent event) {
@@ -722,7 +719,7 @@ public class TaskListPanel extends UiPart<Region> {
 
 }
 ```
-###### /resources/view/DeadlineListPanel.fxml
+###### \resources\view\DeadlineListPanel.fxml
 ``` fxml
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import java.net.URL?>
@@ -733,7 +730,7 @@ public class TaskListPanel extends UiPart<Region> {
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@DarkTheme.css" />
         <URL value="@Extensions.css" />
@@ -788,139 +785,7 @@ public class TaskListPanel extends UiPart<Region> {
     </children>
 </VBox>
 ```
-###### /resources/view/EventListPanel.fxml
-``` fxml
-<?import com.jfoenix.controls.JFXTabPane?>
-<?import java.net.URL?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
-<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-    <stylesheets>
-        <URL value="@DarkTheme.css" />
-        <URL value="@Extensions.css" />
-    </stylesheets>
-    <children>
-      <JFXTabPane fx:id="tabPanePlaceHolder" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
-         <tabs>
-            <Tab text="All">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <ListView fx:id="allListView" layoutY="34.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="34.0" />
-                        <Text fill="#f1f1f1" layoutX="4.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Events:">
-                           <font>
-                              <Font name="Segoe UI Semibold" size="19.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </Tab>
-          <Tab text="Upcoming">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <Text fill="#f1f1f1" layoutX="4.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Events:">
-                           <font>
-                              <Font name="Segoe UI Semibold" size="19.0" />
-                           </font>
-                        </Text>
-                        <ListView fx:id="upcomingListView" layoutY="34.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="34.0" />
-                     </children>
-                  </AnchorPane>
-               </content>
-            </Tab>
-          <Tab text="Finished">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <Text fill="#f1f1f1" layoutX="4.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Events:">
-                           <font>
-                              <Font name="Segoe UI Semibold" size="19.0" />
-                           </font>
-                        </Text>
-                        <ListView fx:id="finishedListView" layoutY="34.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="34.0" />
-                     </children>
-                  </AnchorPane>
-               </content>
-            </Tab>
-         </tabs>
-      </JFXTabPane>
-    </children>
-</VBox>
-```
-###### /resources/view/FloatingTaskListPanel.fxml
-``` fxml
-<?import com.jfoenix.controls.JFXTabPane?>
-<?import java.net.URL?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
-<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-    <stylesheets>
-        <URL value="@DarkTheme.css" />
-        <URL value="@Extensions.css" />
-    </stylesheets>
-    <children>
-      <JFXTabPane fx:id="tabPanePlaceHolder" styleClass="ftaskTab" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
-        <tabs>
-            <Tab text="All">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <ListView fx:id="allListView" layoutY="34.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="34.0" />
-                        <Text fill="#f1f1f1" layoutX="4.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floating Tasks:">
-                           <font>
-                              <Font name="Segoe UI Semibold" size="19.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </Tab>
-          <Tab text="Upcoming">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <ListView fx:id="upcomingListView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="34.0" />
-                        <Text fill="#f1f1f1" layoutX="4.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floating Tasks:">
-                           <font>
-                              <Font name="Segoe UI Semibold" size="19.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </Tab>
-          <Tab text="Finished">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <ListView fx:id="finishedListView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="34.0" />
-                        <Text fill="#f1f1f1" layoutX="4.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floating Tasks:">
-                           <font>
-                              <Font name="Segoe UI Semibold" size="19.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </Tab>
-        </tabs>
-      </JFXTabPane>
-    </children>
-</VBox>
-```
-###### /resources/view/MainWindow.fxml
+###### \resources\view\MainWindow.fxml
 ``` fxml
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.1, 0.4, 0.7" VBox.vgrow="ALWAYS">
          <items>
