--- a/collated/test/A0148037E.md
+++ b/collated/test/A0148037E.md
@@ -101,7 +101,7 @@ public class FindCommandTest extends GeeKeepGuiTest {
     }
 }
 ```
-###### /java/seedu/geekeep/logic/LogicManagerTest.java
+###### \java\seedu\geekeep\logic\LogicManagerTest.java
 ``` java
         /**
          *Generates related success message.
@@ -128,7 +128,7 @@ public class FindCommandTest extends GeeKeepGuiTest {
             return successMsg;
         }
 ```
-###### /java/seedu/geekeep/testutil/TypicalTestTasks.java
+###### \java\seedu\geekeep\testutil\TypicalTestTasks.java
 ``` java
     public TestTask dance, japan, exercise, spain, hackathon, fishing, song, meeting, spend;
 
@@ -151,15 +151,12 @@ public class FindCommandTest extends GeeKeepGuiTest {
                     .withStartDateTime("01-04-17 1630").withDescription("little tokyo").build();
             song = new TaskBuilder().withTitle("Compose Songs").withEndDateTime("01-05-17 1630")
                     .withStartDateTime("01-04-17 1630").withDescription("4th street").build();
-
-            // Manually added
             meeting = new TaskBuilder().withTitle("Group Meeting").withEndDateTime("01-05-17 1630")
                     .withStartDateTime("01-04-17 1630").withDescription("little india").build();
             spend = new TaskBuilder().withTitle("Spend 30 Days").withEndDateTime("01-05-17 1630")
                     .withStartDateTime("01-04-17 1630").withDescription("chicago ave").build();
         } catch (IllegalValueException e) {
             e.printStackTrace();
-            assert false : "not possible";
         }
     }
 
